css/article.css
/* ... */
#article.filter-manual #article-text .likely-junk {
  background-color: rgba(255, 102, 102, 0.9);
}

#article.filter-manual #article-text .possibly-junk {
  animation-name: flashing-background;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-delay: 1s;
}

@keyframes flashing-background {
  0%   { background-color: rgba(255, 255, 102, 0); }
  10%  { background-color: rgba(255, 255, 102, 0.8); }
  40%  { background-color: rgba(255, 255, 102, 0.8); }
  80%  { background-color: rgba(255, 255, 102, 0); }
  100% { background-color: rgba(255, 255, 102, 0); }
}

#article.filter-manual #article-text * {
  cursor: pointer;
}

#article.filter-manual #article-footers {
  opacity: 0.25;
}

#article-footers {
  font-size: 10pt;
}

#article-menu {
  position: absolute;
  background-color: #eeeeee;
  border-radius: 4px;
  box-shadow: 1px 1px 5px black;
  padding: 2px 2px 2px 2px;
  white-space: nowrap;
}

#menu-annotate {
  font-size: 1.4em;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#menu-annotate LI {
  padding: 0.2em 0.4em 0.2em 0.4em;
  cursor: pointer;
}

#menu-annotate LI:hover {
  color: #ffffff;
  background-color: #333333;
  border-radius: 4px;
}

.style-button {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  margin: 2px 2px 0 2px;
  border-radius: 3px;
  width: 24px;
  height: 24px;
  cursor: pointer;
}

.style-button::before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-repeat: no-repeat;
  background-size: 18px;
  background-position: center;
  filter: brightness(0);
}

.style-button.set {
  background-color: rgb(0, 0, 0);
  border-radius: 3px;
}

.style-button.set::before {
  filter: brightness(100);
}

.style-button.partial {
  background-color: rgb(200, 200, 200);
}

.style-button.bold::before {
  background-image: url('../img/bold.svg');
}

.style-button.italic::before {
  background-image: url('../img/italic.svg');
}

.style-button.underline::before {
  background-image: url('../img/underline.svg');
}

.style-button.strikethrough::before {
  background-image: url('../img/strike-through.svg');
}

.style-button.subscript::before {
  background-image: url('../img/subscript.svg');
}

.style-button.superscript::before {
  background-image: url('../img/superscript.svg');
}

.style-button.remove::before {
  background-image: url('../img/format-clear.svg');
}

.style-button.heading1::before {
  background-image: url('../img/heading-1.svg');
}

.style-button.heading2::before {
  background-image: url('../img/heading-2.svg');
}

.style-button.heading3::before {
  background-image: url('../img/heading-3.svg');
}

.style-button.heading4::before {
  background-image: url('../img/heading-4.svg');
}

.style-button.heading5::before {
  background-image: url('../img/heading-5.svg');
}

.style-button.heading6::before {
  background-image: url('../img/heading-6.svg');
}

.style-button.blockquote::before {
  background-image: url('../img/blockquote.svg');
}

.style-button.paragraph::before {
  background-image: url('../img/paragraph.svg');
}

#footnote-backstage {
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

#line-height-detection {
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

.footer-pusher {
  float: right;
  line-height: 0;
  visibility: hidden;
  width: 0px;
  margin-left: 1px;
}

.footer-content {
  float: right;
  box-sizing: border-box;
  width: 100%;
  margin-top: 5mm;
  /* page margin top plus margin bottom */
  margin-bottom: calc(25mm + 25mm);
  padding-inline-start: 1.2em;
  white-space: pre-wrap;
}

.footer-content:focus {
  outline-offset: 12px;
}

.footer-content:empty {
  /* no margin needed when it's empty */
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.footnote-item.Arab {
  direction: rtl;
}

.footnote-item .term.Arab  {
  direction: rtl;
}

.footnote-item.Armn {
}

.footnote-item .term.Armn  {
}

.footnote-item.Beng {
}

.footnote-item .term.Beng  {
}

.footnote-item.Cyrl {
}

.footnote-item .term.Cyrl  {
}

.footnote-item.Deva {
}

.footnote-item .term.Deva  {
}

.footnote-item.Ethi {
}

.footnote-item .term.Ethi  {
}

.footnote-item.Geor {
}

.footnote-item .term.Geor  {
}

.footnote-item.Grek {
}

.footnote-item .term.Grek  {
}

.footnote-item.Gujr {
}

.footnote-item .term.Gujr  {
}

.footnote-item.Guru {
}

.footnote-item .term.Guru  {
}

.footnote-item.Hang {
}

.footnote-item .term.Hang  {
}

.footnote-item.Hans {
}

.footnote-item .term.Hans  {
}

.footnote-item.Hant {
}

.footnote-item .term.Hant  {
}

.footnote-item.Hebr {
  direction: rtl;
}

.footnote-item .term.Hebr  {
}

.footnote-item.Jpan {
}

.footnote-item .term.Jpan  {
}

.footnote-item.Khmr {
}

.footnote-item .term.Khmr  {
}

.footnote-item.Knda {
}

.footnote-item .term.Knda  {
}

.footnote-item.Laoo {
}

.footnote-item .term.Laoo  {
}

.footnote-item.Latn {
}

.footnote-item .term.Latn  {
}

.footnote-item.Mlym {
}

.footnote-item .term.Mlym  {
}

.footnote-item.Mymr {
}

.footnote-item .term.Mymr  {
}

.footnote-item.Orya {
}

.footnote-item .term.Orya  {
}

.footnote-item.Sinh {
}

.footnote-item .term.Sinh  {
}

.footnote-item.Taml {
}

.footnote-item .term.Taml  {
}

.footnote-item.Telu {
}

.footnote-item .term.Telu  {
}

.footnote-item.Thai {
}

.footnote-item .term.Thai  {
}

.footer-spacer {
  float: right;
  width: 100%;
  /* should match margin-top of .paper */
  height: 5mm;
  line-height: 0;
  visibility: hidden;
}

#article-footers *:last-child .footer-spacer {
  display: none;
}

.paper {
  width: 210mm;
  height: 297mm;
  /* should match height of .footer-spacer */
  margin-top: 5mm;
  background-color: white;
  box-shadow: 1px 1px 5px black;
}

.paper:first-child {
  margin-top: 0;
}
/* ... */

